# Python-Logo-Widgets

./: .deepsource.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Loading Bar Widget.py  MANIFEST.in  PLANNING.md  Python Logo Widget.py  Python Powered Length Widget.py  Python Powered Width Widget.py  README.md  SECURITY.md  __init__.py  __main__.py  length.py  logo.py  logo_widget.py  main.py  pyproject.toml  python_powered_length_widget.py  python_powered_width_widget.py  requirements.txt  setup.cfg  setup.py  width.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/agents/: api-agent.md  docs-agent.md  lint-agent.md  test-agent.md
.github/workflows/: build.yml  codeql.yml  docker-build.yml  push-to-pypi.yml  pylint.yml  pytest.yml  test.yml
docs/: CUSTOMIZATION.md  README.md  USAGE.md
docs/legal/: PRIVACY.md  TERMS.md
python_logo_widgets/: __init__.py  __main__.py  _compat.py  _demo.py  widgets.py
tests/: test_compat.py  test_main.py  test_widgets.py
