[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "Python-Logo-Widgets"
version = "2.2.0"
authors = [
  { name="willtheorangeguy" },
]
description = "A group of widgets showing the Python logos, that can easily be added to your Python GUI code!"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Widget Sets',
]

[project.urls]
"Homepage" = "https://github.com/willtheorangeguy/Python-Logo-Widgets"
"Bug Tracker" = "https://github.com/willtheorangeguy/Python-Logo-Widgets/issues"